@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-04T01:42:29Z",
-  "count_outdated" : 1739,
-  "uniques_outdated" : 984,
+  "timestamp" : "2025-01-05T01:51:40Z",
+  "count_outdated" : 1740,
+  "uniques_outdated" : 985,
   "count" : 1742,
   "uniques" : 987,
   "clones" : [
-    {
-      "timestamp": "2024-12-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-30T00:00:00Z",
       "count": 1,
